<resources>
    <string name="app_name">Iznajmljivanje vozila</string>
    <string name="login_sign_in">PRIJAVI SE</string>
    <string name="login_create_new_account">Kreiraj novi račun</string>
    <string name="login_person_description">ikona osobe</string>
    <string name="hint_username">korisničko ime</string>
    <string name="hint_password">lozinka</string>
    <string name="hint_email">email adresa</string>
    <string name="hint_lastname">prezime</string>
    <string name="hint_firstname">ime</string>
    <string name="register_cancel">Odustani</string>
    <string name="register">Registriraj se</string>
    <string name="natrag">Natrag</string>
    <string name="profil">Profil</string>
    <string name="korisnickaPodrska">Korisnička podrška</string>
    <string name="postaviNamPitanje">Postavi nam pitanje</string>
    <string name="pitanjeKorisnickojSluzbi">Postavi pitanje našoj korisničkoj podršci</string>
    <string name="faq">FAQ</string>
    <string name="postaviPitanjeView">Idi na postaviPitanjeView</string>
    <string name="odgovor">Odgovor</string>
    <string name="pitanjeTekst">Pitanje?</string>
    <string name="pitanjeBroj">Pitanje #n</string>
    <string name="vasaPitanja">Vaša pitanja</string>
    <string name="appName">Iznajmljivanje vozila</string>
    <string name="car_mark">Car mark</string>
    <string name="car_model">Car model</string>
    <string name="car_year">Car year</string>
    <string name="car_Grade">Car grade</string>
    <string name="reserve_vehicle">Rezerviraj vozilo</string>
    <string name="vehicle_reserved">Rezervirano</string>
    <string name="car_Details">Car details</string>
    <string name="myReservations">Moje rezervacije</string>
    <string name="listEmpty">Niste rezervirali niti jedno vozilo</string>
    <string name="remove_reservation">Ukloni rezervaciju</string>
    <string name="postavkeAplikacije">Postavke aplikacije</string>
    <string name="review_vehicle">Recenzije</string>
    <string name="reviews">Recenzije</string>
    <string name="username">Username</string>
    <string name="comment">Comment</string>
    <string name="grade">Grade</string>
    <string name="leaveRecension">Ostavite recenziju za korišteno vozilo</string>
    <string name="recensionDescription">Ocjenite naše usluge i ostavite komentar o vašem iskustvu s našim vozilom</string>
    <string name="recension_vehicle">Ostavi recenziju</string>
    <string name="closeRecension">Odustani</string>
    <string name="newRecension">Recenzija</string>
    <string name="writeRecension">Napiši recenziju\n</string>
    <string name="yourRecension">Vaša recenzija</string>
    <string name="otherRecensions">Druge recenzije</string>
    <string name="txtGrade">Ocjena:</string>
</resources>