<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ScreenBackground">

    <ImageButton
        android:id="@+id/natrag"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/baseline_arrow_back_ios_24"
        android:contentDescription="@string/natrag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/korisnickaPodrska"
        style="@style/TextColorLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/mulish"
        android:text="@string/korisnickaPodrska"
        android:textAllCaps="false"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/natrag"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/faq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/arrow_border"
        android:fontFamily="@font/mulish"
        android:padding="6dp"
        android:text="@string/faq"
        style="@style/ScreenBackground"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postaviPitanje" />

    <Button
        android:id="@+id/vasaPitanja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/mulish"
        android:padding="6dp"
        android:text="@string/vasaPitanja"
        style="@style/ScreenBackground"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/faq"
        app:layout_constraintTop_toBottomOf="@+id/postaviPitanje" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/faqQuestions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faq"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/postaviPitanje"
        style="@style/ScreenBackground"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corner"
        android:fontFamily="@font/mulish"
        android:padding="12dp"
        android:text="@string/postaviNamPitanje"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/korisnickaPodrska" />

    <EditText
        android:inputType="text"
        android:id="@+id/inputPitanja"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/white"
        android:fontFamily="@font/mulish"
        android:hint="@string/pitanjeKorisnickojSluzbi"
        android:textSize="16sp"
        style="@style/ScreenBackground"
        app:layout_constraintBottom_toBottomOf="@+id/postaviPitanje"
        app:layout_constraintEnd_toStartOf="@+id/posaljiNovoPitanje"
        app:layout_constraintStart_toStartOf="@+id/postaviPitanje"
        app:layout_constraintTop_toTopOf="@+id/postaviPitanje"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/posaljiNovoPitanje"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/arrow_border"
        app:layout_constraintBottom_toBottomOf="@+id/postaviPitanje"
        app:layout_constraintEnd_toEndOf="@+id/postaviPitanje"
        app:srcCompat="@drawable/baseline_arrow_forward_24"
        android:contentDescription="@string/postaviPitanjeView"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>




