<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        app:cardElevation="0dp"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextColorLabel"
                android:layout_alignParentTop="true"
                android:layout_marginTop="12dp"
                android:layout_marginStart="12dp"
                android:layout_alignParentStart="true"
                android:text="@string/username"
                android:fontFamily="@font/mulish"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextColorLabel"
                android:layout_marginTop="8dp"
                android:layout_marginStart="12dp"
                android:layout_below="@id/username"
                android:layout_alignParentStart="true"
                android:text="@string/comment"
                android:fontFamily="@font/mulish"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtGrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextColorLabel"
                android:layout_marginTop="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="12dp"
                android:layout_below="@id/comment"
                android:layout_alignParentStart="true"
                android:text="@string/txtGrade"
                android:fontFamily="@font/mulish"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/grade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextColorLabel"
                android:layout_marginTop="8dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="12dp"
                android:layout_below="@id/comment"
                android:layout_toEndOf="@id/txtGrade"
                android:text="@string/grade"
                android:fontFamily="@font/mulish"
                android:textSize="20sp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>