<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="false"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner">

            <TextView
                android:id="@+id/brojPitanja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/mulish"
                android:text="@string/pitanjeBroj"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/naslovPitanja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/brojPitanja"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/mulish"
                android:text="@string/pitanjeTekst"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/brojPitanja"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/odgovorPitanja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/naslovPitanja"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/mulish"
                android:text="@string/odgovor"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/naslovPitanja" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>